2023-07-17T16:20:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5578095119 # 1696
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 268 431 / 276 443
* notice: next accum: outdated-unq outdated-all / unq all: 269 432 / 277 444
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-03] / [2023-07-17]

2023-07-17T01:41:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5570913969 # 1694
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 264 425 / 276 443
* notice: next accum: outdated-unq outdated-all / unq all: 268 431 / 276 443
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-02] / []

2023-07-16T16:18:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5568645996 # 1693
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 10 18
* notice: prev accum: outdated-unq outdated-all / unq all: 264 425 / 275 442
* notice: next accum: outdated-unq outdated-all / unq all: 264 425 / 276 443
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-16]

2023-07-11T16:20:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5522414662 # 1678