@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 7,
+  "count": 6,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-07-10T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 4,
